# libigl-cork

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: cork.cmake
include/igl/copyleft/cork/: from_cork_mesh.h  mesh_boolean.h  to_cork_mesh.h
